<resources>
    <string name="app_name">EatOut</string>
    <string name="google_maps_key" translatable="false">AIzaSyDF2gaS5nx5cXswEzXCTrueTNTvJvWE5LI</string>
    <string name="nav_open_drawer">Open drawer</string>
    <string name="nav_close_drawer">Close drawer</string>
    <string name="you">You: </string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="phone_number">Phone number</string>
    <string name="wrong_login">Incorrect login or password</string>
    <string name="login_correct">Loged in successfully</string>
    <string name="reset_password">Reset password</string>
    <string name="error_email">You need to set e-mail</string>
    <string name="city">City</string>
    <string name="account_created">Account has been created</string>
    <string name="account_failure">Someting went wrong while creating account</string>
    <string name="incorrect_email">Incorrect e-mail</string>
    <string name="logout">Log out</string>
    <string name="verify_email">Verify e-mail</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="your_profile">Your profile</string>
    <string name="birth_date">Date of birth</string>
    <string name="description">Description</string>
    <string name="set">Set</string>
    <string name="save_changes">Save changes</string>
    <string name="editing_profile">Edit profile</string>
    <string name="set_old_password">Set old password</string>
    <string name="set_new_password">Set new password</string>
    <string name="profile_picture">Profile picture</string>
    <string name="acc_banned">Account has been banned</string>
    <string name="acc_banned_or_failed">Account has been banned or servers don\'t respond</string>
    <string name="main_page">Home page</string>
    <string name="profile">Profile</string>
    <string name="search_event">Search events</string>
    <string name="create_own_event">Create your own event</string>
    <string name="events">Event</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permissions_denied">Localization permissions denied</string>
    <string name="search_icon">Search icon</string>
    <string name="enter_address">Set address</string>
    <string name="select_point">Select point</string>
    <string name="your_events">Your events</string>
    <string name="your_joined_events">Your joined events</string>
    <string name="set_localization">Set localization</string>
    <string name="name_of_localization">Localization name</string>
    <string name="localization_address">Localization address</string>
    <string name="meeting_theme">Event\'s theme</string>
    <string name="set_theme">Set theme</string>
    <string name="meeting_date">Event\'s date</string>
    <string name="click_set_date">Click to add date</string>
    <string name="create_event">Create event</string>
    <string name="max_participants_between_1_and_10">Number of participants between 1 and 10</string>
    <string name="edit_event">Edit event</string>
    <string name="create_event_successful">Event created successfully</string>
    <string name="confirm_password">Repeat password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="loging_in">Logging in</string>
    <string name="signing_in">Registering</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name_must_have_three_letters">Name must have at least three chars</string>
    <string name="city_must_have_three_letters">City must have at least three chars</string>
    <string name="need_set_birthdate">You need to set your birthdate</string>
    <string name="profile_preview">Profile preview</string>
    <string name="info_about_event">Information about the event</string>
    <string name="event_created_by">Event created by:</string>
    <string name="theme">Theme</string>
    <string name="place">Place</string>
    <string name="date_of_beginning">Beginning date</string>
    <string name="max_participants">Maximum participants</string>
    <string name="already_joined">Already joined</string>
    <string name="join_event">Join event</string>
    <string name="leave_event">Leave event</string>
    <string name="cancel_request">Cancel request</string>
    <string name="informations">Informations</string>
    <string name="chat">Chat</string>
    <string name="participants">participants</string>
    <string name="request_to_join">Join requests</string>
    <string name="delete_event">Delete event</string>
    <string name="successfully_deleted_event">Successfully deleted the event</string>
    <string name="creating_event">Creating an event</string>
    <string name="manage_event">Managing the event</string>
    <string name="email_extists">Given e-mail already exists</string>
    <string name="given_password_too_weak">Given password is too weak</string>
    <string name="password_required">Password is required</string>
    <string name="password_required_more_than_6_chars">Password must have at least six chars</string>
    <string name="passwords_must_be_same">Passwords have to be the same</string>
    <string name="birth_date_required">You have to set your birthdate</string>
    <string name="set_new_pasword_again">Set new password again</string>
    <string name="changing_password">Changing password</string>
    <string name="incorrect_old_password">Incorrect old password</string>
    <string name="live_in">Live in</string>
    <string name="accept_request">Accept request</string>
    <string name="joined">Joined</string>
    <string name="pendings">Requested</string>
    <string name="write_message">Type message...</string>
    <string name="send_button_descr">message send button</string>
    <string name="send_image_error">Something went wrong while sending image</string>
    <string name="image_saved">Image has been saved</string>
    <string name="sorry_try_again">Sorry, try again</string>
    <string name="sure_to_delete_event">Are you sure you want to delete this event</string>
    <string name="sure_to_leave_event">Are you sure to leave this event?</string>
    <string name="you_left_event">You have left event</string>
    <string name="something_went_wrong_while_deleting_event">Something went wrong while leaving the event</string>
    <string name="delete_user">Delete user</string>
    <string name="sure_to_delete_user_from_event">Are you sure you want delete this user from event?</string>
    <string name="successfully_deleted_user">Successfully deleted user</string>
    <string name="sure_to_leave_app">Are you sure you want leave app?</string>
    <string name="report_user">Report user</string>
    <string name="theme_cannot_be_empty">Theme cannot be empty</string>
    <string name="message_must_have_atleast_10_chars">Message must have at least 10 chars</string>
    <string name="user_has_been_reported">User has been reported</string>
    <string name="error_while_reporting">Something went wrong while reporting user</string>
    <string name="review_events">Event preview</string>
    <string name="kicked">You have been kicked</string>
    <string name="joined_events">Joined events</string>
    <string name="cannot_open_googles_map">Cannot open Google\'s map</string>
    <string name="choose_localization">Choose localization!</string>
    <string name="theme_must_have_atleast_3_chars">Theme must have at least 3 chars</string>
    <string name="set_date">Pick date!</string>
    <string name="max_participants_count">Set maximum number of participants</string>
    <string name="error_while_creating_event">Something went wrong while creating an event</string>
    <string name="cannot_find_current_localization">Cannot find current localization</string>
    <string name="add_user">Add user</string>
    <string name="sure_to_add_user_to_event">Are you sure you want add this user?</string>
    <string name="user_has_been_added">User has been added</string>
    <string name="delete_request">Delete request</string>
    <string name="sure_to_delete_users_request">Are you sure you want delete this user\'s request?</string>
    <string name="successfully_deleted_users_request">Successfully deleted user\'s request</string>
    <string name="password_changed">Password has been changed</string>
    <string name="something_went_wrong_while_chaning_passwd">Something went wrong while changing the password</string>
    <string name="successfully_update_data">Successfully updated data!</string>
    <string name="something_went_wrong_while_updating_data">Something went wrong while updating data</string>
    <string name="event_preview">Event preview</string>
    <string name="search_events">Search event</string>
    <string name="search_themes">Search themes</string>
    <string name="email_is_required">E-mail is required</string>
    <string name="message_send_to_given_email">Message has been send to given e-mail</string>
    <string name="app_author">author Bartosz Brzychciński</string>
    <string name="app_icon">application icon</string>
    <string name="report_button">report button</string>
    <string name="turn_localization">Turn localization on</string>
    <string name="do_you_have_acc">Do you have account?</string>
    <string name="you_neeed_acc">Do you need account?</string>
    <string name="welcome_in_app">Welcome in our app</string>
    <string name="events_created_by_you">Events created by you</string>
    <string name="so_long_you_dont_have_events">You don\'t have any events at this moment</string>
    <string name="report_theme">Report theme</string>
    <string name="report_message">Report message</string>
    <string name="choose_distance_event_search">Choose search distance</string>
    <string name="verify_email_before_login">First of all you need verify your email if you want to log in</string>
    <string name="send_verification_email">Send verification e-mail</string>
    <string name="check_if_email_is_verified">Check if e-mail is verified</string>
    <string name="email_verified_login_again">Email has been verified, please log in again!</string>
    <string name="send_email_error">Something went wrong while sending an e-mail</string>
    <string name="verification_email_sent">Verification e-mail has been sent</string>
    <string name="email_not_verified">Email has not been verified!</string>
    <string name="reports">Reports</string>
    <string name="give_admin">Give admin</string>
    <string name="ban_user">Ban user</string>
    <string name="admin_panel">Admin panel</string>
    <string name="report_date">Report date</string>
    <string name="search_user_by_email">Search user by e-mail</string>
    <string name="user_banned">User has been banned</string>
    <string name="error_while_banning">Something went wrong while banning the user</string>
    <string name="reason">Reason</string>
    <string name="ban">Ban</string>
    <string name="report">Report</string>
    <string name="report_preview">Report preview</string>
    <string name="reporting_user">Reporting user</string>
    <string name="reported_user">Reported User</string>
    <string name="information_about_the_report">Information about the report</string>
    <string name="select_option">Select option</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="reason_cannot_be_empty">Reason cannot be empty</string>
    <string name="reason_must_have_5chars">Reason must have at least 5 chars</string>
    <string-array name="reports_option">
        <item>Delete report</item>
        <item>Ban reported user</item>
        <item>Ban reporting user</item>
    </string-array>
    <string name="unban_user">Unban user</string>
    <string name="revoke_admin">Revoke admin</string>
</resources>