<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:theme="@style/AppTheme">

    <item
        android:id="@+id/app_bar_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never"
        android:title="@string/edit_profile" />
    <item
        android:id="@+id/app_bar_change_password"
        android:icon="@drawable/ic_lock"
        app:showAsAction="never"
        android:title="@string/change_password" />
    <item
        android:id="@+id/app_bar_admin"
        app:showAsAction="never"
        android:title="@string/admin_panel"
        android:visible="false" />

    <item
        android:id="@+id/app_bar_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never"
        android:title="@string/logout" />

</menu>