<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinedEvents.JoinedEventPreviewActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/joined_preview_tablayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/joined_preview_info_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informations" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/joined_preview_chat_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/joined_preview_joined_people_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participants" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/joined_preview_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joined_preview_tablayout" />

</androidx.constraintlayout.widget.ConstraintLayout>